# pterminal

./: .gitignore  CLAUDE.md  Cargo.toml
cli/: Cargo.toml
cli/src/: main.rs
crates/pterminal-core/: Cargo.toml
crates/pterminal-core/src/: event.rs  git_info.rs  lib.rs  port_scanner.rs
crates/pterminal-core/src/config/: mod.rs  theme.rs
crates/pterminal-core/src/notification/: mod.rs  store.rs
crates/pterminal-core/src/split/: mod.rs
crates/pterminal-core/src/terminal/: emulator.rs  mod.rs  pty.rs  spsc.rs
crates/pterminal-core/src/workspace/: mod.rs
crates/pterminal-ipc/: Cargo.toml
crates/pterminal-ipc/src/: client.rs  lib.rs  protocol.rs  server.rs
crates/pterminal-plugin-api/: Cargo.toml
crates/pterminal-plugin-api/src/: lib.rs  manifest_loader.rs
crates/pterminal-plugin-api/tests/: core_model.rs  manifest_loader.rs
crates/pterminal-plugin-host/: Cargo.toml
crates/pterminal-plugin-host/src/: lib.rs
crates/pterminal-plugin-host/tests/: host_rpc.rs
crates/pterminal-render/: Cargo.toml
crates/pterminal-render/src/: bg.rs  bg.wgsl  bg_instanced.wgsl  grid.rs  lib.rs  renderer.rs  text.rs
crates/pterminal-sdk/: Cargo.toml
crates/pterminal-sdk/src/: lib.rs
crates/pterminal-sdk/tests/: introspection.rs  sdk.rs
crates/pterminal-ui/: Cargo.toml
crates/pterminal-ui/src/: app.rs  lib.rs  slint_app.rs
crates/pterminal-ui/src/plugin/: mod.rs  registry.rs
crates/pterminal-ui/tests/: sidebar_registry.rs
crates/pterminal-ui/ui/: app.slint
docs/: pterminal-plan.md  pterminal-plugin-plan.md
scripts/: run_termbench.sh
src/: main.rs
