[package]
name = "pterminal-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "pterminal-cli"
path = "src/main.rs"

[dependencies]
pterminal-ipc.workspace = true
pterminal-core.workspace = true
pterminal-render.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
wgpu.workspace = true
