[package]
name = "pterminal-ui"
version.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
pterminal-core.workspace = true
pterminal-render.workspace = true
pterminal-ipc.workspace = true
winit.workspace = true
wgpu.workspace = true
pollster.workspace = true
tracing.workspace = true
anyhow.workspace = true
arboard.workspace = true
serde_json.workspace = true
slint = { version = "1.15", features = ["unstable-wgpu-28", "unstable-winit-030"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"

[build-dependencies]
slint-build = "1.15"
